--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -16,6 +16,8 @@ body, html, .fill-height {
 // TODO: Find a way to not hardcode this
 .reveal-modal {
     top: 1.5rem !important;
+    // Mapbox's zoom button is z-index 999, so need modal to be above it
+    z-index: 1000 !important;
 }
 
 #sidebar {
@@ -51,9 +53,11 @@ body, html, .fill-height {
     .signed-in-message {
         @extend .large-10;
         @extend .columns;
-        em {
+        .user-email {
+            font-style: italic;
             font-weight: bold;
         }
+
     }
     .sign-out-button {
         @extend .large-2;
@@ -63,6 +67,9 @@ body, html, .fill-height {
             @extend .button;
             @extend .tiny;
         }
+    }
+    .sign-in-error {
+
     }
 }
 
